--- a/xkcamera/src/main/res/layout/camera_view.xml
+++ b/xkcamera/src/main/res/layout/camera_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="#000000"
-             android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000000"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -12,14 +12,14 @@
         <VideoView
             android:id="@+id/video_preview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
         <ImageView
             android:id="@+id/image_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#000"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
     </FrameLayout>
 
 
@@ -34,28 +34,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_flash_on"/>
+            android:src="@drawable/ic_flash_on" />
 
         <ImageView
             android:id="@+id/image_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_camera"/>
+            android:src="@drawable/ic_camera" />
 
     </LinearLayout>
 
-
-    <com.cjt2325.cameralibrary.CaptureLayout
+    <com.xukui.library.xkcamera.CaptureLayout
         android:id="@+id/capture_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom" />
 
-    <com.cjt2325.cameralibrary.FoucsView
+    <com.xukui.library.xkcamera.FoucsView
         android:id="@+id/fouce_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
+
 </FrameLayout>
