--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,5 +6,4 @@
     android:layout_height="match_parent"
     app:duration_max="10000"
     app:iconMargin="20dp"
-    app:iconSize="30dp"
-    app:iconSrc="@drawable/ic_camera_enhance_black_24dp" />
+    app:iconSize="30dp" />
