--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.xukui.library.xkcamera.JCameraView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_camera"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:duration_max="10000"
-    app:iconMargin="20dp"
-    app:iconSize="30dp" />
+    android:layout_height="match_parent" />
