--- a/xkcamera/src/main/res/layout/camera_view.xml
+++ b/xkcamera/src/main/res/layout/camera_view.xml
@@ -5,9 +5,9 @@
     android:background="#000000"
     android:orientation="vertical">
 
-    <!--视频预览-->
+    <!--相机预览-->
     <VideoView
-        android:id="@+id/vv_video"
+        android:id="@+id/v_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -46,7 +46,7 @@
 
     <!--聚焦-->
     <com.xukui.library.xkcamera.FoucsView
-        android:id="@+id/view_foucs"
+        android:id="@+id/v_foucs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
