--- a/xkcamera/src/main/res/layout/camera_view.xml
+++ b/xkcamera/src/main/res/layout/camera_view.xml
@@ -45,11 +45,12 @@
         android:layout_gravity="bottom" />
 
     <!--聚焦-->
-    <com.xukui.library.xkcamera.FoucsView
-        android:id="@+id/v_foucs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/iv_foucs"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
+        android:src="@drawable/ic_foucs"
         android:visibility="invisible" />
 
 </FrameLayout>
