--- a/xkcamera/src/main/res/layout/xkcamera_view_capture_layout.xml
+++ b/xkcamera/src/main/res/layout/xkcamera_view_capture_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -52,7 +53,8 @@
                 android:id="@+id/btn_capture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                app:size="80dp" />
 
         </FrameLayout>
 
