--- a/xkcamera/src/main/res/values/attrs.xml
+++ b/xkcamera/src/main/res/values/attrs.xml
@@ -3,16 +3,25 @@
 
     <attr name="max_duration" format="integer" />
     <attr name="min_duration" format="integer" />
+    <attr name="progress_color" format="color" />
+    <attr name="outside_color" format="color" />
+    <attr name="inside_color" format="color" />
 
     <declare-styleable name="JCameraView">
-        <attr name="max_duration"/>
-        <attr name="min_duration"/>
+        <attr name="max_duration" />
+        <attr name="min_duration" />
+        <attr name="progress_color" />
+        <attr name="outside_color" />
+        <attr name="inside_color" />
     </declare-styleable>
 
     <declare-styleable name="CaptureButton">
         <attr name="size" format="dimension" />
-        <attr name="max_duration"/>
-        <attr name="min_duration"/>
+        <attr name="max_duration" />
+        <attr name="min_duration" />
+        <attr name="progress_color" />
+        <attr name="outside_color" />
+        <attr name="inside_color" />
     </declare-styleable>
 
 </resources>
