--- a/xkcamera/src/main/res/layout/xkcamera_view_camera.xml
+++ b/xkcamera/src/main/res/layout/xkcamera_view_camera.xml
@@ -20,7 +20,7 @@
         android:visibility="invisible" />
 
     <!--闪光灯-->
-    <com.xukui.library.xkcamera.view.StableImageView
+    <com.xukui.library.xkcamera.StableImageView
         android:id="@+id/iv_flash"
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -29,7 +29,7 @@
         android:src="@drawable/ic_flash_on" />
 
     <!--镜头切换-->
-    <com.xukui.library.xkcamera.view.StableImageView
+    <com.xukui.library.xkcamera.StableImageView
         android:id="@+id/iv_switch"
         android:layout_width="60dp"
         android:layout_height="60dp"
