--- a/xkcamera/src/main/res/layout/xkcamera_view_capture_layout.xml
+++ b/xkcamera/src/main/res/layout/xkcamera_view_capture_layout.xml
@@ -24,7 +24,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp">
 
-            <ImageView
+            <com.xukui.library.xkcamera.StableImageView
                 android:id="@+id/iv_back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
