--- a/xkcamera/src/main/res/layout/xkcamera_view_camera.xml
+++ b/xkcamera/src/main/res/layout/xkcamera_view_camera.xml
@@ -46,11 +46,11 @@
 
     <!--聚焦-->
     <ImageView
-        android:id="@+id/iv_foucs"
+        android:id="@+id/iv_focus"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_foucs"
+        android:src="@drawable/ic_focus"
         android:visibility="invisible" />
 
 </FrameLayout>
