--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,4 +4,5 @@
     android:id="@+id/view_camera"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:flash_visibility="false"
     app:mode="photo" />
